--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -148,7 +148,7 @@
 <p>The following Guide was originally meant to help migrating this "Origin-to-Styx" process to the first Styx release 2.1.0, over to 2.2, 2.3 and then 2.4.0. In a second step this was reworked for Serendipity Styx 2.6, better pointing you back to 2.4 for the autoupdater plugin. By time, Serendipity Styx stable hit version 2.9.5, it was checked again. The 2.9(.5) revision branch is the recommended last version for simple drop-over migration upgraders! Do not do this Origin-to-Styx migrations with Styx 3.x releases, since a lot of helper tasks were removed! <strong>That said</strong>, if you are on Styx already, jumping to Styx 3.x will be as easy as ever.</p>
 <p><strong>Styx</strong> has come a long way with lots of changes. It would require to inspect and update this guide in deep to jump to latest release <strong>without any</strong> possible flaws for these migration upgrades. Needless to say: Best of all is a complete <strong>new</strong> installation.</p>
 <p>Starting from scratch enables "<em>hand-cared migrations</em> " too, since you may install the latest Styx release independently, make it run and include everything you have in your old Blog, like plugins, MediaLibrary uploads/ items and possible more, export you old database, edit the SQL file and then carefully fill up the <strong>new</strong> database tables one by one to include all necessary parts of your old install. It has successfully been done by users before! But you need a little knowledge which database items have dependencies in other database tables and which database parts and values can get ignored. This enables to have a clean system with clean structure and including your blogs history.</p>
-<p>But now, back to the guide:</p>
+<p>But now, back to the migration guide:</p>
 
 <h4>Upgrade migration by named package (FTP or WGET like tools)</h4>
 <p>Did I already say: <strong><em>Back it up</em></strong>? No? Then fully backup your blog and your database!</p>
@@ -247,6 +247,8 @@
 <p>Styx new <strong>modemaintain</strong> and <strong>changelog</strong> event plugins are available, plugged as <strong>maintenance widgets</strong>. <strong>Upgraders</strong> have to install them via Spartacus themselves. And at last, you should read the Styx ChangeLog. This can (then) be done easily via the Backends Maintenance page. :) Definitely!</p>
 
 <p>Fresh installs already supplied and activated the entryproperties, changelog and modemaintain plugins for you ... among others!</p>
+
+<p>&nbsp;</p>
 
 <h3 id="normal-edition-upgrades">Normal in-Styx Edition Upgrades</h3>
 
