hc::installation: Update to Styx discussions

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -485,7 +485,7 @@
 
 <p>Now that you have successfully installed Serendipity Styx, go ahead and explore. Create some entries, categories, or install a few plugins via Spartacus, that you can also find here in the <a href="../../plugins/">Styx Spartacus WWW mirror</a>. A recommended one for immediate install for example would be the “<b>Serendipity Autoupdate</b>” event plugin! The Spartacus interface is in most cases self-explanatory and open for experiments.</p>
 
-<p>If you have any questions, feel free to come to <a href="https://board.s9y.org/" target="_blank" rel="noopener">the forums</a> or to browse the <a href="./index.html">docs section</a> for further documentation.</p>
+<p>If you have any questions, feel free to come to the <a href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener">discussion forums</a> or to browse the <a href="./index.html">docs section</a> for further documentation.</p>
 
                 </div>
             </div>
