--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -123,6 +123,12 @@
 
                     <p>If you use a <strong>WYSIWYG-Editor</strong> like the CKEditor you don't need to care about setting any markup options. This is automatically done for you.</p>
 
+                    <p>A brief history of text handling:<br>In the old days no good Rich Text (WYSIWYG) Editors were on the market. So the design of database entries and parsing tools - the on-demand workflow - was restricted and separated to keep TEXT and not HTML. You are right when you say <em>whatever it takes, it is a combination of bytes</em>. The only difference is that markup commands need an additional interpreter between the database and the browser. Markup Plugins and BBCode use text markers like <code>*xxx*</code> or <code>[b]xxx[/b]</code> that these parser tools convert to HTML on demand.</p>
+
+                    <p>So the old installations days kept "text" only. The Serendipity entryproperties plugin cache option (if enabled) cached the conversion into HTML as a double database table entry to avoid this conversion performance issue on demand.</p>
+
+                    <p>This "text-only" assumption-design works like this until today, with the one important exception, that the RICH Text (WYSIWYG) Editor does <strong>not</strong> care of this (separating) history and stores its HTML right away in the main database entries table. This is generally <strong>no problem</strong> since when you start using modern RICH Text Editors you'll never want go back to use other markup Editors. If your blog history is that you come from markdown for example and then switched over to RICH Text there is also no problem, since this is marked and so Serendipity knows what to do. But it <em>may</em> lead to problems when you switch markup Editors like your pants. So this warning is not a RICH Text Editor warning only. Each different "Editor" has its own demands.</p>
+
                     <h4 id="docs-nl2br">nl2br</h4>
 
                     <p>The nl2br plugin <em>‹ read: nl to br ›</em> is enabled by default in new Serendipity blogs. It converts newlines (nl) to break tags (<code>&lt;br /&gt;</code>) in entries and comments. Whenever you press the “Enter” key on your keyboard, you’re adding a newline to your entry; it looks like you’ve ended the current line and started a new line.</p>
