hc::trackbacks: Update for rel trackbacks

--- a/hc/en/trackbacks-pingbacks-commentapi.html
+++ b/hc/en/trackbacks-pingbacks-commentapi.html
@@ -150,7 +150,7 @@
 
                     <p>So basically you don’t have to do anything manually at all!</p>
 
-                    <p>When a blog does not support the “magic” RDF metadata so that Serendipity can send and automatic trackback, you can specify the “manual” Trackback URI when using the <a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_trackback/">serendipity_event_trackback</a> plugin.</p>
+                    <p>When a blog does not support the HTML rel=trackback header or the “magic” RDF metadata so that Serendipity can send and automatic trackback, you can specify the “manual” Trackback URI when using the <a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_trackback/">serendipity_event_trackback</a> plugin.</p>
 
                     <p>If a page does not contain the magic RDF metadata, or wrong metadata (the RDF:specifier does not equal the URL you entered - sometimes it matters if you use http://www.example.com or http://example.com!) you will get this message when saving an entry:</p>
 
