hc::configuration:: Add Styx Theme Dark Mode option to PP

--- a/hc/en/configuration.html
+++ b/hc/en/configuration.html
@@ -134,6 +134,7 @@
                       <li><strong>Real name</strong> [<span class="vartype-str">string</span>] The full name of the author. This is the name seen by readers.</li>
                       <li><strong>Your e-mail address</strong> [<span class="vartype-str">string</span>] Your personal e-mail address.</li>
                       <li><strong>Language</strong> [<span class="vartype-array">list</span>] Select the language for your Blog. This overrules the general configuration language setting.</li>
+                      <li><strong>Styx Theme Dark Mode</strong> [<span class="vartype-bool">boolean</span>] Yes/No.</li>
                       <li><strong>Use WYSIWYG editor</strong> [<span class="vartype-bool">boolean</span>] Do you want to use the WYSIWYG editor? Yes/No.</li>
                       <li><strong>Send comment announcements?</strong> [<span class="vartype-bool">boolean</span>] Do you want to receive emails when comments are posted to your entries? Yes/No.</li>
                       <li><strong>Send trackback announcements?</strong> [<span class="vartype-bool">boolean</span>] Do you want to receive emails when trackbacks are posted to your entries? Yes/No.</li>
