hc::admin-interface: Minor for consistency

--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -129,9 +129,9 @@
                     <h4><strong>Media</strong></h4>
 
                     <ul>
-                      <li><strong>Add media:</strong> Add media items (images, documents, PDFs, MP3, etc) to the media library.</li>
-                      <li><strong>Media library:</strong> Manage items already stored in the media library.</li>
-                      <li><strong>Manage directories:</strong> Media items can be stored in individual directories/folders. This is especially useful when your media library contains many items.</li>
+                      <li><strong>Add media:</strong> Add media items (images, documents, PDFs, MP3, etc) to the MediaLibrary.</li>
+                      <li><strong>Media library:</strong> Manage items already stored in the MediaLibrary.</li>
+                      <li><strong>Manage directories:</strong> Media items can be stored in individual directories/folders. This is especially useful when your MediaLibrary contains many items.</li>
                     </ul>
 
                     <h4><strong>Activity</strong></h4>
