hc::code-primers: Minor for consistency

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -510,7 +510,7 @@ print_r($entries);
   <li><code>$serendipity['simpleFilters']</code>: Boolean whether simplified media and entry filter toolbars are shown</li>
   <li><code>$serendipity['enableBackendPopup']</code>: Boolean whether popups in the Backend are shown inline or as “real” popups</li>
   <li><code>$serendipity['enableBackendPopupGranular']</code>: Bypass enableBackendPopup option at certain places</li>
-  <li><code>$serendipity['showMediaToolbar']</code>: Boolean whether to show toolbars for media library even in “picker” mode</li>
+  <li><code>$serendipity['showMediaToolbar']</code>: Boolean whether to show toolbars for MediaLibrary even in “picker” mode</li>
   <li><strong>Additional administrative variables are:</strong></li>
   <li><code>$serendipity['no_create']</code>: If set, the author has no write permissions to anything in the Backend</li>
   <li><code>$serendipity['right_publish']</code>: Boolean to indicate if an author may publish entries (or only drafts)</li>
