--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1932,6 +1932,22 @@
         </ul>
     </div>
 
+    <div id="serendipity_event_blogpdf" class="plugin">
+        <h4 class="plugin_summary">Export blog as PDF</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_blogpdf</dt>
+            <dd class="plugin_version">Version 2.0.0 (GPL (Uses LGPL FPDF, HTML2PDF, UFPDF, Last Updated 2022-08-19)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Olivier PLATHEY, Steven Wittens, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+        </dl>
+        <p class="plugin_description">Allows visitors to download your blog in the PDF format</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_blogpdf.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_blogpdf">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_blogpdf" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_blogpdf/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
     <div id="serendipity_event_xmlrpc" class="plugin">
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
