--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1936,7 +1936,7 @@
         <h4 class="plugin_summary">Export blog as PDF</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_blogpdf</dt>
-            <dd class="plugin_version">Version 2.0.0 (GPL (Uses LGPL FPDF, HTML2PDF, UFPDF, Last Updated 2022-08-19)</dd>
+            <dd class="plugin_version">Version 2.0.1 (GPL (Uses LGPL TCPDF, Last Updated 2022-08-19)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Olivier PLATHEY, Steven Wittens, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
