--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -4,7 +4,7 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -20,7 +20,7 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.4 (GPL, Last Updated 2022-08-27)</dd>
+            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -204,7 +204,7 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.19.1.1 (GPL, Last Updated 2022-07-31)</dd>
+            <dd class="plugin_version">Version 4.19.1.2 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Rustam Abdullaev, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.6.2</dd>
         </dl>
@@ -524,9 +524,9 @@
         <h4 class="plugin_summary">Typeset/Extended Buttons for non-WYSIWYG editors</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_typesetbuttons</dt>
-            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2018-08-06)</dd>
-            <dd class="plugin_maintainers">Matthew Groeninger, Malte Diers, Matthias Gutjahr</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_version">Version 1.00 (GPL, Last Updated 2022-09-18)</dd>
+            <dd class="plugin_maintainers">Matthew Groeninger, Malte Diers, Matthias Gutjahr, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Adds buttons for various encoded typeset entities and other extended actions.</p>
         <ul class="plugin_actions">
@@ -672,7 +672,7 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -864,7 +864,7 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.4 (GPL, Last Updated 2022-08-27)</dd>
+            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1000,7 +1000,7 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -1016,7 +1016,7 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.4 (GPL, Last Updated 2022-08-27)</dd>
+            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1268,7 +1268,7 @@
         <h4 class="plugin_summary">Customizable Entries Archive</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_customarchive</dt>
-            <dd class="plugin_version">Version 1.21 (GPL, Last Updated 2021-10-29)</dd>
+            <dd class="plugin_version">Version 1.22 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -1560,7 +1560,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.77 (GPL, Last Updated 2020-06-07)</dd>
+            <dd class="plugin_version">Version 1.78 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9</dd>
         </dl>
@@ -1920,7 +1920,7 @@
         <h4 class="plugin_summary">Downloadmanager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_downloadmanager</dt>
-            <dd class="plugin_version">Version 1.59 (GPL, Last Updated 2022-09-17)</dd>
+            <dd class="plugin_version">Version 1.60 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Alexander 'dma147' Mieland, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.3.0</dd>
         </dl>
@@ -1952,7 +1952,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.77 (GPL, Last Updated 2020-06-07)</dd>
+            <dd class="plugin_version">Version 1.78 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9</dd>
         </dl>
@@ -2216,7 +2216,7 @@
         <h4 class="plugin_summary">Avatar Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_gravatar</dt>
-            <dd class="plugin_version">Version 1.74 (GPL, Last Updated 2022-01-20)</dd>
+            <dd class="plugin_version">Version 1.75 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -2264,7 +2264,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 2.6.0 (GPL, Last Updated 2022-07-13)</dd>
+            <dd class="plugin_version">Version 2.6.1 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.6.0</dd>
         </dl>
@@ -2312,7 +2312,7 @@
         <h4 class="plugin_summary">Lightbox for entry images</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_lightbox</dt>
-            <dd class="plugin_version">Version 2.11.1 (GPL, Last Updated 2022-04-13)</dd>
+            <dd class="plugin_version">Version 2.11.2 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Thomas Nesges, Andy Hopkins, Lokesh Dhakar, Cody Lindley, Stephan Manske, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2412,7 +2412,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 2.6.0 (GPL, Last Updated 2022-07-13)</dd>
+            <dd class="plugin_version">Version 2.6.1 (GPL, Last Updated 2022-09-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.6.0</dd>
         </dl>
