book: Rename fcn _serendipity_send() for ophian/styx@acfc34ccdef4a2f37378972141017f6e062ba13a

--- a/book/index.html
+++ b/book/index.html
@@ -49122,7 +49122,7 @@ die Sie bei der Entwicklung von Plugins und Ähnlichem häufig einsetzen werden.
 </p>
 
 <p class="desc">
-<code class="item function">_serendipity_send()</code>,
+<code class="item function">serendipity_send()</code>,
 (<code class="item file">include/functions_trackbacks.inc.php</code>)
 <span class="desc-info">
     <span class="box">
