--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1936,8 +1936,8 @@
         <h4 class="plugin_summary">Export blog as PDF</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_blogpdf</dt>
-            <dd class="plugin_version">Version 2.2.4 (GPL (Uses LGPL TCPDF, Last Updated 2022-09-23)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Olivier PLATHEY, Steven Wittens, Ian Styx</dd>
+            <dd class="plugin_version">Version 2.2.5 (GPL (Uses LGPL TCPDF, Last Updated 2022-09-24)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Olivier Plathey, Steven Wittens, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Allows visitors to download your blog in the PDF format</p>
